--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:9999",
+  "proxy": "https://chat-backend-production.up.railway.app",
   "browserslist": {
     "production": [
       ">0.2%",
